survey-salesforce/salesforce-app/src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>DateTimeValue__c</fullName>
        <label>DateTimeValue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateValue__c</fullName>
        <label>DateValue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumericValue__c</fullName>
        <label>NumericValue</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <description>Option(used for Multitext questions)</description>
        <label>Option</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TextValue__c</fullName>
        <label>TextValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QA-{00000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>